--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <h3>Automação de Desinstalação em Larga Escala (3.000+ Máquinas)</h3>
                     <p><strong>Desafio:</strong> Remover o software Mozilla Firefox de forma silenciosa e obrigatória em mais de 3.000 dispositivos na empresa.</p>
                     <p><strong>Solução:</strong> Desenvolvi um script de detecção e remoção, distribuído via SCCM, garantindo a execução em todos os endpoints.</p>
-                    <p><strong>Resultado:</strong> 99% de conformidade de remoção alcançada em 48 horas.</p>
+                    <p><strong>Resultado:</strong> 99% de conformidade de remoção alcançada.</p>
                 </div>
 
                 <div class="project-card">
